@@ -86,6 +86,7 @@
      * Re-registration can be done only with deleted token
      * Fix SD Card module race conditions
      * Make it possible to hide certain loggers from interesting log
+     * Filter telemetry, send only what's "significantly" changed
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
